# vlc_player_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: VlcPlayer.action
node/: vlc_player
